# GWToolbox_AllowAllDialogs

./: .gitignore  CMakeLists.txt  README.md
cmake/: gwca.cmake  minhook.cmake
